<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.myBalance.MyBalanceFragment">

    <View
        android:id="@+id/view_bg"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/color_light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_yourBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/your_balance"
        android:textColor="@color/color_black"
        app:layout_constraintStart_toStartOf="@+id/view_bg"
        app:layout_constraintTop_toTopOf="@+id/view_bg" />

    <ImageView
        android:id="@+id/imageView_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_baseline_visibility"
        app:layout_constraintBottom_toBottomOf="@+id/textView_yourBalance"
        app:layout_constraintStart_toEndOf="@+id/textView_yourBalance"
        app:layout_constraintTop_toTopOf="@+id/textView_yourBalance" />

    <TextView
        android:id="@+id/textView_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/statement_value"
        android:textColor="@color/color_cyan"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_bg"
        app:layout_constraintStart_toStartOf="@+id/textView_yourBalance"
        app:layout_constraintTop_toBottomOf="@+id/textView_yourBalance"
        android:visibility="gone"/>

    <View
        android:id="@+id/view_visibility"
        android:layout_width="150dp"
        android:layout_height="5dp"
        android:background="@color/color_cyan"
        app:layout_constraintBottom_toBottomOf="@+id/view_bg"
        app:layout_constraintStart_toStartOf="@+id/textView_yourBalance"
        app:layout_constraintTop_toBottomOf="@+id/textView_yourBalance" />

    <TextView
        android:id="@+id/textView_yourMoves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/your_moves"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bg" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView_StatementList"
        android:name="com.rodrigoads.appphi.presentation.myStatement.MyStatementListFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_yourMoves" />

    <ProgressBar
        android:id="@+id/progressBar_myBalance"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_visibility"
        app:layout_constraintStart_toEndOf="@+id/imageView_visibility"
        app:layout_constraintTop_toTopOf="@+id/imageView_visibility"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>